project alignment fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,21 +109,25 @@ header ul{
     display: flex;
     flex-direction: row;
     text-align: center; 
-    max-width: 700px;
-    margin: 0 auto;
+    margin: auto;
+    max-width: 600px;
+    justify-content: flex-start;
 }
-.project{
-    margin: 20px;
-    padding: 20px;
+.project{    
     display: flex;
     flex-wrap: wrap;
-    flex-basis: 1 1 100%;
+    flex: 1 1 100%;
     align-items: center;
     justify-content: center;
 }
+.project a {
+    align-self: flex-end;
+}
 .project h3, p{
     width: 100%;
+    align-self: flex-start;
 }
+
 
 
 .learn-more-btn{
